src/main/resources/static/css/style.css
@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600,700|Roboto:300,400,500,700');

/*------------------------------------------
Project Name : Car Rental
Desgined By  : eCreative solutions
Developed By : sharjeel;
Date        :  01/February/18;

Table Of Index
------------------
1. Base css
2. Typography css
3. Header css
4. Banner css
5. Booking Form css
6. About Us css
7. Counter css
8. Services css
9. Support Team css
10. Testimonials css
11. Blog css
12. contact form css
13. Footer css
14. Media Quries css
------------------------------------------*/
#paypal_btn {
    margin: 10px 5px 0 5px;
    color: white;
    padding: 7px;
    background-color: #3b7bbf;
}

.custom-input {
    padding: 12px 20px;
    margin: 8px 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
}

/* Modal PayPal form*/
body {
    font-family: Arial, Helvetica, sans-serif;
}

/* The Modal (background) */
.modal {
    display: none; /* Hidden by default */
    position: fixed; /* Stay in place */
    z-index: 100; /* Sit on top */
    padding-top: 190px; /* Location of the box */
    left: 0;
    top: 0;
    width: 100%; /* Full width */
    height: 100%; /* Full height */
    overflow: auto; /* Enable scroll if needed */
    background-color: rgb(0, 0, 0); /* Fallback color */
    background-color: rgba(0, 0, 0, 0.4); /* Black w/ opacity */
    text-align: center;
}

/* Modal Content */
.modal-content {
    position: relative;
    background-color: #fefefe;
    margin: auto;
    padding: 0;
    border: 1px solid #888;
    width: 80%;
    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
    -webkit-animation-name: animatetop;
    -webkit-animation-duration: 0.4s;
    animation-name: animatetop;
    animation-duration: 0.4s
}

/* Add Animation */
@-webkit-keyframes animatetop {
    from {
        top: -300px;
        opacity: 0
    }
    to {
        top: 0;
        opacity: 1
    }
}

@keyframes animatetop {
    from {
        top: -300px;
        opacity: 0
    }
    to {
        top: 0;
        opacity: 1
    }
}

/* The Close Button */
.close {
    color: white !important;
    float: right;
    font-size: 28px;
    font-weight: bold;
}

.close:hover,
.close:focus {
    color: #000 !important;
    text-decoration: none;
    cursor: pointer;
}

.modal-header {
    padding: 2px 16px;
    background-color: #3b7bbf;
}

.modal-header  h2 {
    color: white;
}

.modal-body {
    padding: 2px 16px;
}

.modal-footer {
    padding: 2px 16px;
    background-color: #3b7bbf;
    color: white;
}

/* Popup container - can be anything you want */
.popup {
    position: relative;
    display: inline-block;
    cursor: pointer;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

/* The actual popup */
.popup .popuptext {
    visibility: hidden;
    width: 550px;
    background-color: #555;
    color: #fff;
    /*text-align: center;*/
    border-radius: 6px;
    padding: 8px 0;
    position: absolute;
    z-index: 1;
    bottom: 125%;
    left: -120%;
    margin-left: -80px;
}

/* Popup arrow */
.popup .popuptext::after {
    content: "";
    position: absolute;
    top: 100%;
    left: 50%;
    margin-left: -5px;
    border: 5px solid transparent;
    border-top-color: #555;
}

/* Toggle this class - hide and show the popup */
.popup .show {
    visibility: visible;
    -webkit-animation: fadeIn 1s;
    animation: fadeIn 1s;
}

/* Add animation (fade in the popup) */
@-webkit-keyframes fadeIn {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

html, body {
    min-height: 100%;
}

body {
    background: #ffffff;
    font-family: 'Open Sans', sans-serif;
    font-style: normal;
    font-weight: 400;
    overflow-x: hidden;
}

/*---------------------------------------
   Typorgraphy              
-----------------------------------------*/

h1, h2, h3, h4, h5, h6 {
    font-family: 'Roboto', sans-serif;
}

h1, h2, h4 {
    font-weight: 500;
}

h1 {
    font-size: 50px;
}

h2 {
    color: #272727;
    font-size: 36px;
    line-height: 52px;
    margin: 0px;
}

h3 {
    font-size: 16px;
    line-height: 32px;
}

h4 {
    color: #454545;
    font-size: 18px;
    line-height: 26px;
}

h5 {
    letter-spacing: 0.5px;
}

p {
    color: #777;
    font-size: 16px;
    font-weight: 300;
    line-height: 25px;
}

ul, ol {
    list-style: none;
    padding: 0;
    margin: 0;
}

img {
    max-width: 100%;
}

/*---------------------------------------
   Buttons               
-----------------------------------------*/

.btn-success:focus {
    background-color: #000;
    color: #ffffff;
}

.section-btn {
    background: #f9c200;
    border-radius: 0;
    color: #ffffff;
    font-size: 18px;
    font-weight: 700;
    padding: 12px 30px;
    margin-top: 22px;
    text-transform: uppercase;
    border: none;
}

.section-btn:focus, .section-btn:hover {
    background: #fff;
    color: #333;
}

/*---------------------------------------
   General               
-----------------------------------------*/

html {
    -webkit-font-smoothing: antialiased;
}

a {
    transition: ease-in-out 0.3s;
    -webkit-transition: ease-in-out 0.3s;
    -moz-transition: ease-in-out 0.3s;
    -ms-transition: ease-in-out 0.3s;
    color: #f9c200;
    text-decoration: none !important;
}

a:hover, a:active, a:focus {
    color: #f9c200;
    outline: none;
}

* {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

*:before, *:after {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

.parallax-section {
    background-attachment: fixed !important;
    background-size: cover !important;
}

.section-title {
    margin: 0;
    padding-bottom: 50px;
    text-align: center;
}

.section-title h3 {
    position: relative;
    font-size: 40px;
    margin-bottom: 50px;
    text-transform: uppercase;
    font-weight: 700;
    line-height: 42px;
}
/* ... */

